# proxmox-backup-verifier

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  config.json.example  pyproject.toml
proxmox_backup_verifier/: cli.py  config.py  verify.py  vma.py
tests/: test_config.py  test_verify.py  test_vma.py
